2007-07-28  Thomas Wood  <thos@gnome.org>

	* theme-util.c: Add missing include

2007-07-27  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init): constify drag'n'drop data, remove
	unused variable, use G_N_ELEMENTS where applicable

2007-07-27  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init, theme_postinit): remove workarounds
	for initialization problems in early versions of the capplet

2007-07-27  Denis Washington  <dwashington@gmx.net>

	* appearanc-themes.c: (appearance_window_drag_data_received_cb),
	(themes_init):
	Implement drag-and drop theme installation.

2007-07-27  Denis Washington  <dwashington@gmx.net>

	* data/cursor-*.pcf:
	* data/mouse-cursor-*.png:
	Cursor fonts and thumbnails moved from gnome-mouse-properties.

	* data/Makefile.am:
	Install the new files.

2007-07-26  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (update_color_buttons_from_string):
	* appearance-themes.c: (theme_load_from_gconf), (theme_is_equal):
	* theme-util.c: (theme_find_in_model):
	* theme-util.h: move some utility code over to common

2007-07-26  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (update_color_buttons_from_settings),
	(color_scheme_defaults_button_clicked_cb): really unset the gconf key
	when reverting colors

2007-07-26  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (update_color_buttons_from_string),
	(update_color_buttons_from_settings):
	* appearance-themes.c: (theme_is_equal):
	* theme-util.c: (theme_parse_color_scheme),
	(theme_color_scheme_equal):
	* theme-util.h: make color scheme comparisons work much more reliably

2007-07-26  Jens Granseuer  <jensgr@gmx.net>

	* gnome-wp-item.c: (gnome_wp_item_update_description): add a comment
	for translators (bug #460506)

2007-07-26  Denis Washington <denisw@svn.gnome.org>

	* data/appearance.glade:
	Fixed a bug introduced in my last commit which caused to make the
	button box appear above the cursors list in the theme details window.
