@@ -1,3 +1,8 @@
+2007-07-28  Jens Granseuer  <jensgr@gmx.net>
+
+	* wp-cellrenderer.c: (cell_renderer_wallpaper_render):
+	* wp-cellrenderer.h: fix cell renderer state logic to not be always on
+
 2007-07-28  Thomas Wood  <thos@gnome.org>
 
 	* theme-util.c: Add missing include
